[tool.poetry]
name = "quiz-maker-gpt"
version = "0.1.0"
description = "Quiz Maker Prototype for reviewing any topic using chat gpt"
authors = ["ninz <nreclarin@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
openai = "^0.27.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
